data/derived/comb/progs/unify/prog1079.ml.out
Characters 194-213:
  expr ^ "Sine(" ^ buildhelper 0 depth-1 expr ^ ")"
                   ^^^^^^^^^^^^^^^^^^^
Error: This expression has type string -> string
       but an expression was expected of type int
